# otus_project_2

./: CMakeLists.txt  README.md  client_main.cpp  config.cpp  config.h  format.sh  main.cpp  server_config.json
.github/workflows/: release.yaml
db/: db_connection.cpp  db_connection.h  db_manager.cpp  db_manager.h  i_db_connection.h  pg_db_connection.cpp  pg_db_connection.h
db/scripts/: README  create_db.sql  create_db_entities.sh  create_tables.sql  inserts.sql
doc/message_formats/: 01.message.json  02.status_message_processed.json  03.status_message_received.json
include/: i_messages_processor.h  message.cpp  message.h  transfer_message.h  transfer_message_v2.cpp  transfer_message_v2.h
net/: client.cpp  client.h  server.cpp  server.h  session.cpp  session.h  session_manager.cpp  session_manager.h
tests/: db_manager_test.cpp  db_manager_test.h  db_test.cpp  db_test.h  json_test.cpp  json_test.h  main.cpp  message_test.cpp  message_test.h
